[package]
name = "rust-nannou-test"
version = "0.1.0"
authors = ["max <harumaxy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "./src/main.rs"
[[bin]]
name = "basic"
path = "./src/basic.rs"
[[bin]]
name = "shapes"
path = "./src/shapes.rs"

[dependencies]
nannou = "0.15"
